# WagasciMonteCarlo

./: CHANGELOG  CMakeLists.txt  README.md
cmake/: FindB2MC.cmake
data/: CMakeLists.txt  kink_input.root
data/geometry/: Scin_Mod_position.txt  bm_dead_channel.txt  bm_vertical_zpos_corr.txt  bm_verticalpe_map.txt  bm_verticalpe_map_left.txt  bm_verticalpe_map_right.txt  correction.txt  wagasci_gdml.gdml  wagasci_mapping_table.txt  wagasci_mapping_table.xlsx  wallmrd_mapping_table_new.txt  wallmrd_mapping_table_new.xlsx  wallmrd_mapping_table_new_px.txt  wallmrd_mapping_table_old.txt  wallmrd_mapping_table_old.xlsx  wallmrd_mapping_table_old_px.txt  yasuposition.txt
docs/: doxygen.conf  mainpage.markdown
docs/images/: Data format.drawio
docs/pptx/: WAGASCI-BabyMIND new MC (2020-09-08).pptx
examples/: CMakeLists.txt  e_nu.cc  fitter_tree.cc  fitter_tree_back.cc  sample_CC0pi.cc  sample_clone.cc  sample_muon.cc  sample_print.cc  sample_reader.cc  sample_recon.cc  sample_true.cc  sample_writer.cc
include/: B2Configuration.hh  B2Converters.hh  B2CosmicMuon.hh  B2DetectorConstruction.hh  B2EmulsionHit.hh  B2EmulsionSensitiveDetector.hh  B2EventAction.hh  B2HorizontalSensitiveDetector.hh  B2Logging.hh  B2MagneticFieldWrapper.hh  B2MichelElectron.hh  B2Neut.hh  B2PrimaryGeneratorAction.hh  B2RandomVertexZ.hh  B2Response.hh  B2RunAction.hh  B2ScintillatorHit.hh  B2SensitiveDetector.hh  B2Settings.hh  B2TrackingAction.hh  B2VerticalSensitiveDetector.hh  B2VetoSensitiveDetector.hh
lib/: B2BeamSummary.cc  B2BeamSummary.hh  B2Boundary.cc  B2Boundary.hh  B2ClusterSummary.cc  B2ClusterSummary.hh  B2Const.hh  B2Dial.cc  B2Dial.hh  B2DialList.cc  B2DialList.hh  B2DialSigmaKey.cc  B2DialSigmaKey.hh  B2Dimension.cc  B2Dimension.hh  B2EmulsionSummary.cc  B2EmulsionSummary.hh  B2Enum.cc  B2Enum.hh  B2EventSummary.cc  B2EventSummary.hh  B2HitSummary.cc  B2HitSummary.hh  B2HitsSet.cc  B2HitsSet.hh  B2MCLinkDef.h  B2MagneticField.cc  B2MagneticField.hh  B2McWeightCalculator.cc  B2McWeightCalculator.hh  B2Measurement.cc  B2Measurement.hh  B2Pdg.cc  B2Pdg.hh  B2Reader.cc  B2Reader.hh  B2ReaderDecorator.cc  B2ReaderDecorator.hh  B2RefArray.cc  B2RefArray.hh  (+16 more)
src/: B2Configuration.cc  B2Converters.cc  B2CosmicMuon.cc  B2DetectorConstruction.cc  B2EmulsionHit.cc  B2EmulsionSensitiveDetector.cc  B2EventAction.cc  B2HorizontalSensitiveDetector.cc  B2Logging.cc  B2MC.cc  B2MagneticFieldWrapper.cc  B2MichelElectron.cc  B2Neut.cc  B2PrimaryGeneratorAction.cc  B2RandomVertexZ.cc  B2Response.cc  B2RunAction.cc  B2ScintillatorHit.cc  B2SensitiveDetector.cc  B2Settings.cc  B2TrackingAction.cc  B2VerticalSensitiveDetector.cc  B2VetoSensitiveDetector.cc  CMakeLists.txt
tests/: B2Clone.test.cc  B2ClusterSummary.test.cc  B2Configuration.test.cc  B2CosmicMuon.test.cc  B2Dimension.test.cc  B2EventAction.test.cc  B2HitSummary.test.cc  B2HitsSet.test.cc  B2Logging.test.cc  B2Measurement.test.cc  B2Neut.test.cc  B2PrimaryParticles.test.cc  B2RandomVertexZ.test.cc  B2Response.test.cc  B2Settings.test.cc  B2SpillSummary.test.cc  B2TrackSummary.test.cc  B2VertexSummary.test.cc  B2Volume.test.cc  B2Writer.test.cc  CMakeLists.txt
tmp/: B2PrimaryGeneratorAction.cc
tools/: CMakeLists.txt
tools/checks/: CMakeLists.txt  check_clusters.cc  check_hits.cc
tools/plots/: CMakeLists.txt  detector_id.cc  draw_field.cc  print_channel_position.gnuplot
tools/scripts/: install.bash  recreate_sample_output.sh
tools/visualization/: vis.mac  vis.mac.backup
